--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
         "symfony/console": "*",
@@ -34,6 +36,7 @@
     },
     "require-dev": {
         "doctrine/coding-standard": "^7.0",
+        "phpstan/phpstan": "^0.12.9",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
@@ -75,14 +78,16 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "csfix": "phpcbf --ignore=src/Migrations/**,src/Kernel.php",
+        "cscheck": "phpcs --ignore=src/Migrations/**,src/Kernel.php"
     },
     "conflict": {
         "symfony/symfony": "*"
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.0.*"
         }
     }
