--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "vue": "^2.6.11",
-        "vue-router": "^3.1.5"
+        "vue-router": "^3.1.5",
+        "vuex": "^3.1.2"
     },
     "browserslist": [
         "> 0.5%",
