--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,5 @@ services:
             - !service { class: PDO, factory: ['@database_connection', 'getWrappedConnection'] }
             # If you get transaction issues (e.g. after login) uncomment the line below
             - { lock_mode: 1 }
+
+    Doctrine\ORM\EntityManager: "@doctrine.orm.default_entity_manager"
