--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,7 +2,7 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     #http_method_override: true
-
+    ide: 'phpstorm://open?file=%%f&line=%%l&/app/>/var/www/vue/symfony-vue/'
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
